Add Members [PUT]&[GET]  API Doc - Update & Show Member
